--- a/sustc-runner/src/main/resources/application.yml
+++ b/sustc-runner/src/main/resources/application.yml
@@ -1,16 +1,24 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/sustc  # change this to your own jdbc url
-    username: sustc  # change this to your own username (avoid using a superuser)
-    password: sustc  # change this to your own password
+    url: jdbc:postgresql://localhost:5432/sustcII  # change this to your own jdbc url
+    username: postgres  # change this to your own username (avoid using a superuser)
+    password: 747576  # change this to your own password
 
 logging:
   level:
     root: off
     io.sustc: debug
+  file:
+    name: logs/${LOG_FILE_NAME:test}.log
+  
 
 ---
 
 benchmark:
   data-path: data
   student-mode: true
+
+spring:
+  datasource:
+    hikari:
+      maximum-pool-size: 30
